<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:orientation="vertical" >
	    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp" >

<ImageView
    android:id="@+id/loginLogo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:src="@drawable/loginlogo" />
    
</RelativeLayout>

    <TextView
        android:id="@+id/logindesc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp" 
                android:layout_marginBottom="4dp" 
        android:text="Welcome," />

    <TextView
        android:id="@+id/logindesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp" 
                android:layout_marginBottom="10dp" 
        android:text="Please login to your account" />
    
            <EditText
                android:id="@+id/domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_domain"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:layout_marginBottom="10dp" 
                android:singleLine="true" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:layout_marginBottom="10dp" 
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginBottom="10dp" 
                android:singleLine="true" />

            	    
    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true" 
                android:background="@color/btnlogin"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_sign_in_register" />

            </RelativeLayout>
            
    
        </LinearLayout>

</RelativeLayout>
