<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:id="@+id/loginLayout"
    android:background="@color/bglogin">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/loginLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/loginlogo"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/logindesc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="2dp"
                android:text="Welcome,"
                android:textColor="@color/White"/>

            <TextView
                android:id="@+id/logindesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="2dp"
                android:text="Please login to your account"
                android:textColor="@color/White"/>


            <EditText
                android:id="@+id/domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_domain"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/White"
                android:textColorHint="@color/Snow"
                android:theme="@style/LoginTextBox"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/prompt_username"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/White"
                android:theme="@style/LoginTextBox"
                android:textColorHint="@color/Snow"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:theme="@style/LoginTextBox"
                android:textColor="@color/White"
                android:textColorHint="@color/Snow"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/loginbutton_background"
                    android:paddingBottom="10dp"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"

                    android:paddingTop="10dp"
                    android:text="@string/action_sign_in_register"
                    android:textColor="@color/DarkGray"/>

            </RelativeLayout>


        </LinearLayout>

</RelativeLayout>

    

</androidx.coordinatorlayout.widget.CoordinatorLayout>
